add page content to sidebar

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
       name: 'Integrations Hub',
       repo: 'getopenwater/OpenWater.Integrations.Hub',
       loadSidebar: true,
+      subMaxLevel: 2,
       auto2top: true,
-      coverpage: true
+      coverpage: true,
     }
   </script>
   <!-- Docsify v4 -->
