add search functionality

--- a/index.html
+++ b/index.html
@@ -19,9 +19,14 @@
       subMaxLevel: 2,
       auto2top: true,
       coverpage: true,
+      paths: 'auto',
+      noData: 'No Results!',
+      depth: 2,
+      placeholder: 'Type to search',
     }
   </script>
   <!-- Docsify v4 -->
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
 </body>
 </html>
