--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Integration Hub Docs</title>
@@ -7,8 +8,9 @@
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
-  <link rel="shortcut icon" type="image/svg" href="./_media/icon.svg"/>
+  <link rel="shortcut icon" type="image/svg" href="./_media/icon.svg" />
 </head>
+
 <body>
   <div id="app">Please wait...</div>
   <script>
@@ -16,6 +18,9 @@
       name: 'Integrations Hub',
       repo: 'getopenwater/OpenWater.Integrations.Hub',
       loadSidebar: true,
+      alias: {
+        '/.*/_sidebar.md': '/_sidebar.md'
+      },
       subMaxLevel: 2,
       auto2top: true,
       coverpage: true,
@@ -29,4 +34,5 @@
   <script src="//cdn.jsdelivr.net/npm/docsify@4"></script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/search.min.js"></script>
 </body>
+
 </html>
